# Music-Player

./: Album.cpp  Album.h  AlbumData.txt  CMakeLists.txt  MusicPlayer.cpp  MusicPlayer.h  Playlist.cpp  Playlist.h  README.md  Song.cpp  Song.h  main.cpp  testing.cpp
